crates/proto-flow/tests/snapshots/regression__capture_request_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a150807 12117b22 73706563 223a2263| ......{"spec":"c 00000000
|6f6e6669 67227d12 19080712 157b2264| onfig"}......{"d 00000010
|6973636f 76657222 3a22636f 6e666967| iscover":"config 00000020
|227d1ac6 030a1076 616c6964 6174652f| "}.....validate/ 00000030
|63617074 75726510 071a157b 2276616c| capture....{"val 00000040
|69646174 65223a22 636f6e66 6967227d| idate":"config"} 00000050
|2298030a 157b2272 65736f75 72636522| "....{"resource" 00000060
|3a22636f 6e666967 227d12fe 020a1161| :"config"}.....a 00000070
|636d6543 6f2f636f 6c6c6563 74696f6e| cmeCo/collection 00000080
|1a082f6b 65792f6f 6e651a08 2f6b6579| ../key/one../key 00000090
|2f74776f 220b2f5f 6d657461 2f757569| /two"./_meta/uui 000000a0
|642a0474 7970652a 06726567 696f6e32| d*.type*.region2 000000b0
|5d0a092f 6a736f6e 2f707472 1207612d| ]../json/ptr..a- 000000c0
|6669656c 64200132 450a0769 6e746567| field .2E..integ 000000d0
|65720a06 73747269 6e671a13 1a037479| er..string....ty 000000e0
|70220464 61746530 b9603a03 656e6322| p".date0.`:.enc" 000000f0
|05746974 6c652a04 64657363 320e7b22| .title*.desc2.{" 00000100
|64656622 3a226175 6c74227d 40013a0e| def":"ault"}@.:. 00000110
|7b226163 6b223a22 74727565 227d4212| {"ack":"true"}B. 00000120
|7b227772 69746522 3a227363 68656d61| {"write":"schema 00000130
|227d4aa3 010a1270 61727469 74696f6e| "}J....partition 00000140
|2f74656d 706c6174 6510031a 400a1e0a| /template...@... 00000150
|0f657374 75617279 2e646576 2f666f6f| .estuary.dev/foo 00000160
|120b6c61 62656c2d 76616c75 650a1e0a| ..label-value... 00000170
|0f657374 75617279 2e646576 2f626172| .estuary.dev/bar 00000180
|120b6f74 6865722d 76616c75 65224208| ..other-value"B. 00000190
|e9ec0610 031a1273 333a2f2f 6275636b| .......s3://buck 000001a0
|65742f70 72656669 78220308 ac023207| et/prefix"....2. 000001b0
|083e1080 e59a773a 18506174 687b7b50| .>....w:.Path{{P 000001c0
|6f737466 69782e54 656d706c 6174657d| ostfix.Template} 000001d0
|7d300438 cfb0f501 5a117b22 72656164| }0.8....Z.{"read 000001e0
|223a2273 6368656d 61227d22 b7050aa7| ":"schema"}".... 000001f0
|050a0e61 636d6543 6f2f6361 70747572| ...acmeCo/captur 00000200
|6510071a 197b2263 61707475 7265223a| e....{"capture": 00000210
|7b22636f 6e666967 223a3432 7d7d22a4| {"config":42}}". 00000220
|030a157b 22726573 6f757263 65223a22| ...{"resource":" 00000230
|636f6e66 6967227d 1204736f 6d651204| config"}..some.. 00000240
|70617468 1afe020a 1161636d 65436f2f| path.....acmeCo/ 00000250
|636f6c6c 65637469 6f6e1a08 2f6b6579| collection../key 00000260
|2f6f6e65 1a082f6b 65792f74 776f220b| /one../key/two". 00000270
|2f5f6d65 74612f75 7569642a 04747970| /_meta/uuid*.typ 00000280
|652a0672 6567696f 6e325d0a 092f6a73| e*.region2]../js 00000290
|6f6e2f70 74721207 612d6669 656c6420| on/ptr..a-field  000002a0
|0132450a 07696e74 65676572 0a067374| .2E..integer..st 000002b0
|72696e67 1a131a03 74797022 04646174| ring....typ".dat 000002c0
|6530b960 3a03656e 63220574 69746c65| e0.`:.enc".title 000002d0
|2a046465 7363320e 7b226465 66223a22| *.desc2.{"def":" 000002e0
|61756c74 227d4001 3a0e7b22 61636b22| ault"}@.:.{"ack" 000002f0
|3a227472 7565227d 42127b22 77726974| :"true"}B.{"writ 00000300
|65223a22 73636865 6d61227d 4aa3010a| e":"schema"}J... 00000310
|12706172 74697469 6f6e2f74 656d706c| .partition/templ 00000320
|61746510 031a400a 1e0a0f65 73747561| ate...@....estua 00000330
|72792e64 65762f66 6f6f120b 6c616265| ry.dev/foo..labe 00000340
|6c2d7661 6c75650a 1e0a0f65 73747561| l-value....estua 00000350
|72792e64 65762f62 6172120b 6f746865| ry.dev/bar..othe 00000360
|722d7661 6c756522 4208e9ec 0610031a| r-value"B....... 00000370
|1273333a 2f2f6275 636b6574 2f707265| .s3://bucket/pre 00000380
|66697822 0308ac02 3207083e 1080e59a| fix"....2..>.... 00000390
|773a1850 6174687b 7b506f73 74666978| w:.Path{{Postfix 000003a0
|2e54656d 706c6174 657d7d30 0438cfb0| .Template}}0.8.. 000003b0
|f5015a11 7b227265 6164223a 22736368| ..Z.{"read":"sch 000003c0
|656d6122 7d28ac02 3280010a 0e736861| ema"}(..2....sha 000003d0
|72642f74 656d706c 6174651a 0f726563| rd/template..rec 000003e0
|6f766572 792f7072 65666978 220b6869| overy/prefix".hi 000003f0
|6e742f70 72656669 78280332 02083c48| nt/prefix(.2..<H 00000400
|0152400a 1e0a0f65 73747561 72792e64| .R@....estuary.d 00000410
|65762f66 6f6f120b 6c616265 6c2d7661| ev/foo..label-va 00000420
|6c75650a 1e0a0f65 73747561 72792e64| lue....estuary.d 00000430
|65762f62 6172120b 6f746865 722d7661| ev/bar..other-va 00000440
|6c756560 8cdc0268 e9ec063a 380a1172| lue`...h...:8..r 00000450
|65636f76 6572792f 74656d70 6c617465| ecovery/template 00000460
|10032221 08808040 10041a14 73333a2f| .."!...@....s3:/ 00000470
|2f627563 6b65742f 7265636f 76657279| /bucket/recovery 00000480
|220308ac 02420c08 903f1205 68747470| "....B...?..http 00000490
|73180142 0308a846 120b3131 3a32323a| s..B...F..11:22: 000004a0
|33333a34 342ae905 0aa7050a 0e61636d| 33:44*.......acm 000004b0
|65436f2f 63617074 75726510 071a197b| eCo/capture....{ 000004c0
|22636170 74757265 223a7b22 636f6e66| "capture":{"conf 000004d0
|6967223a 34327d7d 22a4030a 157b2272| ig":42}}"....{"r 000004e0
|65736f75 72636522 3a22636f 6e666967| esource":"config 000004f0
|227d1204 736f6d65 12047061 74681afe| "}..some..path.. 00000500
|020a1161 636d6543 6f2f636f 6c6c6563| ...acmeCo/collec 00000510
|74696f6e 1a082f6b 65792f6f 6e651a08| tion../key/one.. 00000520
|2f6b6579 2f74776f 220b2f5f 6d657461| /key/two"./_meta 00000530
|2f757569 642a0474 7970652a 06726567| /uuid*.type*.reg 00000540
|696f6e32 5d0a092f 6a736f6e 2f707472| ion2]../json/ptr 00000550
|1207612d 6669656c 64200132 450a0769| ..a-field .2E..i 00000560
|6e746567 65720a06 73747269 6e671a13| nteger..string.. 00000570
|1a037479 70220464 61746530 b9603a03| ..typ".date0.`:. 00000580
|656e6322 05746974 6c652a04 64657363| enc".title*.desc 00000590
|320e7b22 64656622 3a226175 6c74227d| 2.{"def":"ault"} 000005a0
|40013a0e 7b226163 6b223a22 74727565| @.:.{"ack":"true 000005b0
|227d4212 7b227772 69746522 3a227363| "}B.{"write":"sc 000005c0
|68656d61 227d4aa3 010a1270 61727469| hema"}J....parti 000005d0
|74696f6e 2f74656d 706c6174 6510031a| tion/template... 000005e0
|400a1e0a 0f657374 75617279 2e646576| @....estuary.dev 000005f0
|2f666f6f 120b6c61 62656c2d 76616c75| /foo..label-valu 00000600
|650a1e0a 0f657374 75617279 2e646576| e....estuary.dev 00000610
|2f626172 120b6f74 6865722d 76616c75| /bar..other-valu 00000620
|65224208 e9ec0610 031a1273 333a2f2f| e"B........s3:// 00000630
|6275636b 65742f70 72656669 78220308| bucket/prefix".. 00000640
|ac023207 083e1080 e59a773a 18506174| ..2..>....w:.Pat 00000650
|687b7b50 6f737466 69782e54 656d706c| h{{Postfix.Templ 00000660
|6174657d 7d300438 cfb0f501 5a117b22| ate}}0.8....Z.{" 00000670
|72656164 223a2273 6368656d 61227d28| read":"schema"}( 00000680
|ac023280 010a0e73 68617264 2f74656d| ..2....shard/tem 00000690
|706c6174 651a0f72 65636f76 6572792f| plate..recovery/ 000006a0
|70726566 6978220b 68696e74 2f707265| prefix".hint/pre 000006b0
|66697828 03320208 3c480152 400a1e0a| fix(.2..<H.R@... 000006c0
|0f657374 75617279 2e646576 2f666f6f| .estuary.dev/foo 000006d0
|120b6c61 62656c2d 76616c75 650a1e0a| ..label-value... 000006e0
|0f657374 75617279 2e646576 2f626172| .estuary.dev/bar 000006f0
|120b6f74 6865722d 76616c75 65608cdc| ..other-value`.. 00000700
|0268e9ec 063a380a 11726563 6f766572| .h...:8..recover 00000710
|792f7465 6d706c61 74651003 22210880| y/template.."!.. 00000720
|80401004 1a147333 3a2f2f62 75636b65| .@....s3://bucke 00000730
|742f7265 636f7665 72792203 08ac0242| t/recovery"....B 00000740
|0c08903f 12056874 74707318 01420308| ...?..https..B.. 00000750
|a846120b 31313a32 323a3333 3a34341a| .F..11:22:33:44. 00000760
|14153322 11001d77 66554425 bbaa9988| ..3"...wfUD%.... 00000770
|2dffeedd cc221a7b 22636f6e 6e656374| -....".{"connect 00000780
|6f72223a 7b227374 61746522 3a34327d| or":{"state":42} 00000790
|7d320208 20a2061f 0a15666c 6f773a2f| }2.. .....flow:/ 000007a0
|2f696e74 65726e61 6c2e7468 696e6712| /internal.thing. 000007b0
|06120248 691801|                     ...Hi..          000007c0
                                                       000007c7
