crates/proto-flow/tests/snapshots/regression__derive_request_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0a150801 12117b22 73706563 223a2263| ......{"spec":"c 00000000
|6f6e6669 67227d12 a4070801 12157b22| onfig"}.......{" 00000010
|76616c69 64617465 223a2263 6f6e6669| validate":"confi 00000020
|67227d1a fe020a11 61636d65 436f2f63| g"}.....acmeCo/c 00000030
|6f6c6c65 6374696f 6e1a082f 6b65792f| ollection../key/ 00000040
|6f6e651a 082f6b65 792f7477 6f220b2f| one../key/two"./ 00000050
|5f6d6574 612f7575 69642a04 74797065| _meta/uuid*.type 00000060
|2a067265 67696f6e 325d0a09 2f6a736f| *.region2]../jso 00000070
|6e2f7074 72120761 2d666965 6c642001| n/ptr..a-field . 00000080
|32450a07 696e7465 6765720a 06737472| 2E..integer..str 00000090
|696e671a 131a0374 79702204 64617465| ing....typ".date 000000a0
|30b9603a 03656e63 22057469 746c652a| 0.`:.enc".title* 000000b0
|04646573 63320e7b 22646566 223a2261| .desc2.{"def":"a 000000c0
|756c7422 7d40013a 0e7b2261 636b223a| ult"}@.:.{"ack": 000000d0
|22747275 65227d42 127b2277 72697465| "true"}B.{"write 000000e0
|223a2273 6368656d 61227d4a a3010a12| ":"schema"}J.... 000000f0
|70617274 6974696f 6e2f7465 6d706c61| partition/templa 00000100
|74651003 1a400a1e 0a0f6573 74756172| te...@....estuar 00000110
|792e6465 762f666f 6f120b6c 6162656c| y.dev/foo..label 00000120
|2d76616c 75650a1e 0a0f6573 74756172| -value....estuar 00000130
|792e6465 762f6261 72120b6f 74686572| y.dev/bar..other 00000140
|2d76616c 75652242 08e9ec06 10031a12| -value"B........ 00000150
|73333a2f 2f627563 6b65742f 70726566| s3://bucket/pref 00000160
|69782203 08ac0232 07083e10 80e59a77| ix"....2..>....w 00000170
|3a185061 74687b7b 506f7374 6669782e| :.Path{{Postfix. 00000180
|54656d70 6c617465 7d7d3004 38cfb0f5| Template}}0.8... 00000190
|015a117b 22726561 64223a22 73636865| .Z.{"read":"sche 000001a0
|6d61227d 22b9030a 0b737461 626c655f| ma"}"....stable_ 000001b0
|6e616d65 12fe020a 1161636d 65436f2f| name.....acmeCo/ 000001c0
|636f6c6c 65637469 6f6e1a08 2f6b6579| collection../key 000001d0
|2f6f6e65 1a082f6b 65792f74 776f220b| /one../key/two". 000001e0
|2f5f6d65 74612f75 7569642a 04747970| /_meta/uuid*.typ 000001f0
|652a0672 6567696f 6e325d0a 092f6a73| e*.region2]../js 00000200
|6f6e2f70 74721207 612d6669 656c6420| on/ptr..a-field  00000210
|0132450a 07696e74 65676572 0a067374| .2E..integer..st 00000220
|72696e67 1a131a03 74797022 04646174| ring....typ".dat 00000230
|6530b960 3a03656e 63220574 69746c65| e0.`:.enc".title 00000240
|2a046465 7363320e 7b226465 66223a22| *.desc2.{"def":" 00000250
|61756c74 227d4001 3a0e7b22 61636b22| ault"}@.:.{"ack" 00000260
|3a227472 7565227d 42127b22 77726974| :"true"}B.{"writ 00000270
|65223a22 73636865 6d61227d 4aa3010a| e":"schema"}J... 00000280
|12706172 74697469 6f6e2f74 656d706c| .partition/templ 00000290
|61746510 031a400a 1e0a0f65 73747561| ate...@....estua 000002a0
|72792e64 65762f66 6f6f120b 6c616265| ry.dev/foo..labe 000002b0
|6c2d7661 6c75650a 1e0a0f65 73747561| l-value....estua 000002c0
|72792e64 65762f62 6172120b 6f746865| ry.dev/bar..othe 000002d0
|722d7661 6c756522 4208e9ec 0610031a| r-value"B....... 000002e0
|1273333a 2f2f6275 636b6574 2f707265| .s3://bucket/pre 000002f0
|66697822 0308ac02 3207083e 1080e59a| fix"....2..>.... 00000300
|773a1850 6174687b 7b506f73 74666978| w:.Path{{Postfix 00000310
|2e54656d 706c6174 657d7d30 0438cfb0| .Template}}0.8.. 00000320
|f5015a11 7b227265 6164223a 22736368| ..Z.{"read":"sch 00000330
|656d6122 7d1a147b 22736875 66666c65| ema"}..{"shuffle 00000340
|223a2263 6f6e6669 67227d22 137b226c| ":"config"}".{"l 00000350
|616d6264 61223a22 636f6e66 6967227d| ambda":"config"} 00000360
|2a020102 32146669 6c653a2f 2f2f7072| *...2.file:///pr 00000370
|6f6a6563 742f726f 6f743a32 0a182f75| oject/root:2../u 00000380
|73696e67 2f747970 65736372 6970742f| sing/typescript/ 00000390
|6d6f6475 6c651216 66696c65 3a2f2f2f| module..file:/// 000003a0
|70617468 2f746f2f 696d706f 72741ac0| path/to/import.. 000003b0
|030afe02 0a116163 6d65436f 2f636f6c| ......acmeCo/col 000003c0
|6c656374 696f6e1a 082f6b65 792f6f6e| lection../key/on 000003d0
|651a082f 6b65792f 74776f22 0b2f5f6d| e../key/two"./_m 000003e0
|6574612f 75756964 2a047479 70652a06| eta/uuid*.type*. 000003f0
|72656769 6f6e325d 0a092f6a 736f6e2f| region2]../json/ 00000400
|70747212 07612d66 69656c64 20013245| ptr..a-field .2E 00000410
|0a07696e 74656765 720a0673 7472696e| ..integer..strin 00000420
|671a131a 03747970 22046461 746530b9| g....typ".date0. 00000430
|603a0365 6e632205 7469746c 652a0464| `:.enc".title*.d 00000440
|65736332 0e7b2264 6566223a 2261756c| esc2.{"def":"aul 00000450
|74227d40 013a0e7b 2261636b 223a2274| t"}@.:.{"ack":"t 00000460
|72756522 7d42127b 22777269 7465223a| rue"}B.{"write": 00000470
|22736368 656d6122 7d4aa301 0a127061| "schema"}J....pa 00000480
|72746974 696f6e2f 74656d70 6c617465| rtition/template 00000490
|10031a40 0a1e0a0f 65737475 6172792e| ...@....estuary. 000004a0
|6465762f 666f6f12 0b6c6162 656c2d76| dev/foo..label-v 000004b0
|616c7565 0a1e0a0f 65737475 6172792e| alue....estuary. 000004c0
|6465762f 62617212 0b6f7468 65722d76| dev/bar..other-v 000004d0
|616c7565 224208e9 ec061003 1a127333| alue"B........s3 000004e0
|3a2f2f62 75636b65 742f7072 65666978| ://bucket/prefix 000004f0
|220308ac 02320708 3e1080e5 9a773a18| "....2..>....w:. 00000500
|50617468 7b7b506f 73746669 782e5465| Path{{Postfix.Te 00000510
|6d706c61 74657d7d 300438cf b0f5015a| mplate}}0.8....Z 00000520
|117b2272 65616422 3a227363 68656d61| .{"read":"schema 00000530
|227d120b 31313a32 323a3333 3a34341a| "}..11:22:33:44. 00000540
|14153322 11001d77 66554425 bbaa9988| ..3"...wfUD%.... 00000550
|2dffeedd cc2a1a7b 22636f6e 6e656374| -....*.{"connect 00000560
|6f72223a 7b227374 61746522 3a34327d| or":{"state":42} 00000570
|7d223e08 02121209 d2040000 00000000| }">............. 00000580
|112e1600 00000000 001a160a 095b7472| .............[tr 00000590
|75652c33 325d1204 564b1e09 1885c39f| ue,32]..VK...... 000005a0
|15220e7b 22726561 64223a22 646f6322| .".{"read":"doc" 000005b0
|7d2a0032 660a640a 4a0a1561 2f726561| }*.2f.d.J..a/rea 000005c0
|642f6a6f 75726e61 6c3b7375 66666978| d/journal;suffix 000005d0
|123108b9 6012150a 05030908 0507120c| .1..`........... 000005e0
|09e32100 00000000 0010d708 12150a05| ..!............. 000005f0
|070c662b 1d120c09 35010000 00000000| ..f+....5....... 00000600
|10ae1112 160a0e61 6e2f6163 6b2f6a6f| .......an/ack/jo 00000610
|75726e61 6c120403 0402053a 00a2061f| urnal......:.... 00000620
|0a15666c 6f773a2f 2f696e74 65726e61| ..flow://interna 00000630
|6c2e7468 696e6712 06120248 691801|   l.thing....Hi..  00000640
                                                       0000064f
