crates/proto-flow/tests/snapshots/regression__derive_response_json.snap
---
source: crates/proto-flow/tests/regression.rs
expression: json_test(msg)
---
{
  "spec": {
    "protocol": 3032023,
    "configSchema": {"config":"schema"},
    "resourceConfigSchema": {"lambda":"schema"},
    "documentationUrl": "https://example/docs",
    "oauth2": {
      "provider": "oauth-provider",
      "authUrlTemplate": "https://auth-url",
      "accessTokenUrlTemplate": "https://access-token",
      "accessTokenMethod": "POST",
      "accessTokenBody": "foo",
      "accessTokenHeaders": {
        "hdr-one": {"hello":"hdr"},
        "hdr-two": 42.5
      },
      "accessTokenResponseMap": {
        "foo": true,
        "key": "value"
      },
      "refreshTokenUrlTemplate": "https://refresh-token",
      "refreshTokenMethod": "POST",
      "refreshTokenBody": "refresh!",
      "refreshTokenHeaders": {
        "hdr-three": {"refresh":"hdr"}
      },
      "refreshTokenResponseMap": {
        "access": "here"
      }
    }
  },
  "validated": {
    "transforms": [
      {
        "readOnly": true
      },
      {}
    ],
    "generatedFiles": {
      "file:///project/root/deno.json": "content"
    }
  },
  "opened": {},
  "published": {
    "doc": {"published":"doc"}
  },
  "flushed": {},
  "startedCommit": {
    "state": {
      "updated": {"state":"update"},
      "mergePatch": true
    }
  },
  "internal": {
    "typeUrl": "flow://internal.thing",
    "value": "EgJIaRgB"
  }
}
