crates/proto-flow/tests/snapshots/regression__derive_response_proto.snap
---
source: crates/proto-flow/tests/regression.rs
expression: proto_test(msg)
---
|0aae0208 d787b901 12137b22 636f6e66| ..........{"conf 00000000
|6967223a 22736368 656d6122 7d1a137b| ig":"schema"}..{ 00000010
|226c616d 62646122 3a227363 68656d61| "lambda":"schema 00000020
|227d2214 68747470 733a2f2f 6578616d| "}".https://exam 00000030
|706c652f 646f6373 2ae6010a 0e6f6175| ple/docs*....oau 00000040
|74682d70 726f7669 64657212 10687474| th-provider..htt 00000050
|70733a2f 2f617574 682d7572 6c1a1468| ps://auth-url..h 00000060
|74747073 3a2f2f61 63636573 732d746f| ttps://access-to 00000070
|6b656e22 03666f6f 2a1a0a07 6864722d| ken".foo*...hdr- 00000080
|6f6e6512 0f7b2268 656c6c6f 223a2268| one..{"hello":"h 00000090
|6472227d 2a0f0a07 6864722d 74776f12| dr"}*...hdr-two. 000000a0
|0434322e 35320b0a 03666f6f 12047472| .42.52...foo..tr 000000b0
|7565320e 0a036b65 79120722 76616c75| ue2...key.."valu 000000c0
|65223a15 68747470 733a2f2f 72656672| e":.https://refr 000000d0
|6573682d 746f6b65 6e420872 65667265| esh-tokenB.refre 000000e0
|7368214a 1e0a0968 64722d74 68726565| sh!J...hdr-three 000000f0
|12117b22 72656672 65736822 3a226864| ..{"refresh":"hd 00000100
|72227d52 100a0661 63636573 73120622| r"}R...access.." 00000110
|68657265 225a0450 4f535462 04504f53| here"Z.POSTb.POS 00000120
|5412310a 0208010a 0012290a 1e66696c| T.1.......)..fil 00000130
|653a2f2f 2f70726f 6a656374 2f726f6f| e:///project/roo 00000140
|742f6465 6e6f2e6a 736f6e12 07636f6e| t/deno.json..con 00000150
|74656e74 1a002215 0a137b22 7075626c| tent.."...{"publ 00000160
|69736865 64223a22 646f6322 7d2a0032| ished":"doc"}*.2 00000170
|180a160a 127b2273 74617465 223a2275| .....{"state":"u 00000180
|70646174 65227d10 01a2061f 0a15666c| pdate"}.......fl 00000190
|6f773a2f 2f696e74 65726e61 6c2e7468| ow://internal.th 000001a0
|696e6712 06120248 691801|            ing....Hi..      000001b0
                                                       000001bb
